--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "youtubechannel",
   "version": "1.0.0",
   "description": "",
-  "main": "index.html",
+  "main": "index.js",
   "scripts": {
     "test": "live-server"
   },
